# igmnes

./: .gitignore  Cargo.toml  README.md
igmnes_core/: Cargo.toml
igmnes_core/benches/: bench_igmnes.rs
igmnes_core/src/: apu.rs  controller.rs  cpu.rs  debug.rs  dma.rs  errors.rs  instructions.rs  lib.rs  memory.rs  rom.rs
igmnes_core/src/debugger/: disassembler.rs  mod.rs
igmnes_core/src/debugger/frontends/: terminal.rs
igmnes_core/src/mappers/: mapper_000.rs  mapper_002.rs  mapper_003.rs  mapper_004.rs  mapper_007.rs  mapper_189.rs  mod.rs
igmnes_core/src/ppu/: memory.rs  mod.rs  palette.rs
igmnes_frontend_sdl2/: Cargo.toml
igmnes_frontend_sdl2/src/: main.rs
src/: main.rs
src/core/: apu.rs  controller.rs  cpu.rs  debug.rs  dma.rs  errors.rs  instructions.rs  memmap.rs  memory.rs  mod.rs  ppu.rs  rom.rs
src/core/debugger/: command.rs  disassembler.rs  mod.rs
src/core/debugger/frontends/: terminal.rs
src/core/mappers/: mapper_000.rs  mapper_001.rs  mapper_002.rs  mapper_003.rs  mapper_007.rs  mod.rs
src/core/ppu/: memory.rs  mod.rs  palette.rs
