[package]
name = "igmnes"
version = "0.1.0"
authors = ["Ivan Đorđević <i.djordjevic@itsinbox.com>"]

[dependencies]
time = "0.1.35"
sdl2 = { version = "0.36", features = ["bundled"] }
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }

[dependencies.nom]
version = "^2.0"
features = ["verbose-errors"]

[profile.release]
debug = true