[workspace]
resolver = "3"
members = ["igmnes_core", "igmnes_frontend_sdl2"]

[profile.release]
debug = true
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.size]
inherits = "release"
debug = false
strip = true
opt-level = 'z'

[profile.profiling]
inherits = "release"
strip = false
lto = false
debug = 2
opt-level = 3
split-debuginfo = "packed"
