[package]
name = "igmnes_frontend_sdl2"
version = "0.1.0"
edition = "2018"
authors = ["Ivan Đorđević <blashyrk92@gmail.com>"]

[[bin]]
name = "igmnes"
path = "src/main.rs"

[dependencies]
igmnes_core = { path = "../igmnes_core" }
sdl2 = { version = "0.38.0", features = ["bundled"] }
rfd = "0.14.0"

[profile.release]
debug = true
debug-assertions = false
overflow-checks = false
opt-level = 3
lto = "fat"
panic = "abort"

[profile.release.build-override]
debug = true
