[package]
name = "igmnes_frontend_sdl2"
version = "0.1.0"
edition = "2018"
authors = ["Ivan Đorđević <blashyrk92@gmail.com>"]
default-run = "igmnes"

[[bin]]
name = "igmnes"
path = "src/main.rs"

[dependencies]
igmnes_core = { path = "../igmnes_core" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "4583b3d8e4baf1d5a44a9404097f92d5bbc61df7", features = ["bundled"] }
rfd = "0.14.0"
